# info-weather

./: .env  .pylintrc  Dockerfile  README.md  docker-compose.yml  noxfile.py  pyproject.toml  requirements.txt
apps/core/: admin.py  docs.py  models.py  serializers.py  swagger.py  urls.py  utils.py  views.py
apps/core/management/commands/: iforecaster_bot.py
apps/core/migrations/: 0001_initial.py  0002_forecastpart_weatherfact_weatherforecast.py
apps/core/tests/: factories.py
apps/core/tests/views/: test_weather_fact_view.py  test_weather_forecast_view.py
apps/external_api/: weather_yandex.py  yandex.py
apps/external_api/tests/: test_yandex_weather_api.py
weather/: asgi.py  settings.py  swagger.py  urls.py  wsgi.py
