[tool.pyright]
include = ["apps"]
exclude = ["**/node_modules", "**/__pycache__"]
venv = ".venv"

reportMissingImports = true
reportMissingTypeStubs = false

pythonVersion = "3.8"
pythonPlatform = "Linux"

executionEnvironments = [{ root = "." }]

[tool.mypy]
plugins = ["mypy_django_plugin.main"]
env = ["ENV = dev"]

[tool.django-stubs]
django_settings_module = "weather.settings"

[tool.poetry]
name = "weather-django"
version = "0.1.0"
description = ""
authors = ["t.me/ithesand"]

[tool.poetry.dependencies]
python = "3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
